# tripwire

./: .gitignore  CLAUDE.html  CLAUDE.md  Makefile  docker-compose.yml  package-lock.json  requirements.txt
backend/: .env.example  Dockerfile  alembic.ini  celery_app.py  pyproject.toml  requirements.txt  tripwire.db
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  alert.py  document.py  risk_event.py  school.py  student.py
backend/app/routers/: alerts.py  auth.py  chat.py  documents.py  risk_events.py  schools.py  students.py
backend/app/services/: notifications.py  rag.py  research_agent.py  risk_engine.py  supabase_client.py  uagent_client.py  uagent_researcher.py  web_researcher.py
backend/migrations/: env.py
backend/migrations/versions/: 1799d6482c67_initial_schema.py  7ab2b4e66e4f_add_password_hash_to_students.py  a5295f2ca004_make_school_id_nullable.py  a9493668adde_add_display_name_to_students.py  b1c2d3e4f5a6_add_missing_student_columns.py  c3f8a1d2e947_add_financial_aid_url_to_schools.py  e1f2a3b4c5d6_add_supabase_user_id_to_students.py  fa23dac1a91b_initial_migration.py
backend/scripts/: agentverse_agent.py  demo_deadline_fire.py  discover_and_ingest.py  ingest_documents.py  run_research_agent.py  seed_demo_data.py
backend/tests/: test_api.py  test_rag.py  test_risk_engine.py  test_uagent_researcher.py
backend/tests/fixtures/: generate_transcript.py  yale_bad_transcript.txt
frontend/: .env.local.example  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  (+1 more)
(+35 files in other folders)
