[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tripwire-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "anthropic>=0.40.0",
    "openai>=1.57.0",
    "beautifulsoup4>=4.12.3",
    "playwright>=1.49.0",
    "pdfplumber>=0.11.4",
    "boto3>=1.35.0",
    "sendgrid>=6.11.0",
    "twilio>=9.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
